# axidraw

./: README.md  code_of_conduct.md  copying.txt  test_reorder.py
.github/workflows/: python-package.yml
cli/: Installation.txt  README.txt  axicli.py  pyproject.toml  python_example_plot.py  python_example_toggle.py  python_example_xy.py  requirements.txt  setup.py
cli/axicli/: __main__.py  axidraw_cli.py  core.py  utils.py
cli/examples_python/: estimate_time.py  interactive_draw_path.py  interactive_penheights.py  interactive_usb_com.py  interactive_xy.py  low-level_usb.py  low_level_usb.py  plot.py  plot_inline.py  report_pos_inch.py  report_pos_mm.py  toggle.py  turtle_pos.py
cli/pyaxidraw/: ABOUT_THESE_FILES.txt  __init__.py  axidraw.py  axidraw_conf.py  axidraw_control.py  axidraw_svg_reorder.py  changelog.txt  ebb_motion.py  ebb_serial.py  plot_utils.py  plot_utils_import.py
cli/pyaxidraw/axidraw_options/: common_options.py  versions.py
cli/requirements/: requirements.txt
cli/test/: test_smoke.py
cli/test/assets/: axidraw_conf.py
cli/test/test_axicli/: test_ad_py_api.py  test_axidraw_cli.py  test_utils.py
inkscape driver/: __init__.py  axidraw.inx  axidraw.py  axidraw_conf.py  axidraw_control.inx  axidraw_control.py  axidraw_disableMotors.inx  axidraw_exec_get_version_fw.inx  axidraw_exec_get_version_sw.inx  axidraw_exec_motors_disable.inx  axidraw_exec_motors_enable.inx  axidraw_exec_pen_lower.inx  axidraw_exec_pen_raise.inx  axidraw_hatch.inx  axidraw_legacy.inx  axidraw_naming.inx  axidraw_naming.py  axidraw_plus.inx  axidraw_saveplob.inx  axidraw_svg_reorder.inx  axidraw_svg_reorder.py  boundsclip.py  clipping.py  digest_svg.py  dripfeed.py  hershey_axidraw.inx  motion.py  path_objects.py  pen_handling.py  plot_optimizations.py  plot_status.py  plot_utils_import.py  plot_warnings.py  preview.py  process_ai.inx  process_ai.py  rtree.py  serial_utils.py  spatial_grid.py
inkscape driver/axidraw_options/: common_options.py  versions.py
inkscape driver/public_build_materials/: README.txt  build_and_package.sh  buildink.sh  pyinstaller_build.spec  requirements.txt  set_up_build.sh  utils.sh
inkscape driver/public_build_materials/assets/DLLs/: README.txt
inkscape driver/public_build_materials/wrappers/: axidraw_control.py  axidraw_naming.py  axidraw_svg_reorder.py  process_ai.py
inkscape driver/public_build_materials/wrappers/pyinstaller_launchers/: axidraw_control.py  axidraw_naming.py
